syntax = "proto3";
package sojahub.sojahub.relayers;

import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
// this line is used by starport scaffolding # 1
import "gogoproto/gogo.proto";

option go_package = "github.com/sojahub/sojahub/x/relayers/types";

// Query defines the gRPC querier service.
service Query {
    // Queries a list of relayersByDenom items.
	rpc Relayers(QueryRelayersRequest) returns (QueryRelayersResponse) {
		option (google.api.http).get = "/sojahub/sojahub/relayers/{arena}/{denom}";
	}

    // Queries a threshold by denom.
	rpc Threshold(QueryThresholdRequest) returns (QueryThresholdResponse) {
		option (google.api.http).get = "/sojahub/sojahub/relayers/threshold/{arena}/{denom}";
	}
// this line is used by starport scaffolding # 2
}

message QueryRelayersRequest {
    string arena = 1;
    string denom = 2;
}

message QueryRelayersResponse {
    repeated string relayers = 1 [(gogoproto.nullable) = false];
}

message QueryThresholdRequest {
	  string arena = 1;
      string denom = 2;
}

message QueryThresholdResponse {
	uint32 threshold = 1;
}
// this line is used by starport scaffolding # 3
